# ciz1

./: CMakeLists.txt  README.md  main.c
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/interface/: CMakeLists.txt  interface.c  interface.h
src/storage/: CMakeLists.txt  storage.c  storage.h
src/user_input/: CMakeLists.txt  input.c  input.h
src/warship/: CMakeLists.txt  warship.c  warship.h
tests/: CMakeLists.txt  main.cpp  tests.cpp
